gap issues

--- a/inc/css/custom.css
+++ b/inc/css/custom.css
@@ -259,6 +259,7 @@ body .slick-dots li {
 ._jo-recent-posts {
   flex-wrap: wrap;
   display: flex;
+  gap: 2%;
 }
 
 ._jo-recent-posts h2 {
@@ -275,7 +276,6 @@ body .slick-dots li {
 
 ._jo-recent-posts ._jo-recent-post {
   width: 32%;
-  margin-right: 1%;
 }
 
 ._jo-recent-posts ._jo-recent-post ul {
